<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Manual para nuevos creyentes</string>
    <string name="navigation_drawen_open">Drawer open</string>
    <string name="navigation_drawer_close">Drawer close</string>
    <string name="introduction">Introducción</string>
    <string name="gratitude">Agradecimiento</string>
    <string name="first_steps">Primeros pasos</string>
    <string name="bible_books">Libros de la Biblia</string>
    <string name="memorizing_texts">Textos para memorizar</string>
    <string name="conclusion">Conclusión</string>
    <string name="new_disciples">Cómo preparar nuevos creyentes</string>
    <string name="pastor">Pastor y psicólogo Carlos Gomez</string>
    <string name="credits">Créditos</string>
    <string name="exit">Salir</string>
    <string name="pastor_carlos_gomez">Pastor Carlos Gómez</string>
    <string name="sections">Secciones</string>
    <string name="others">Otros</string>
    <string name="url1">https://www.flaticon.com/authors/smashicons</string>
    <string name="url2">http://creativecommons.org/licenses/by/3.0/</string>
    <string name="icons_by">Iconos creados por:</string>
    <string name="license">www.flaticon.com tiene licencia de:</string>
    <string name="app_rating">Evaluar aplicación</string>
    <string name="content_desc">app_icon</string>
    <string name="nombre">Nombre:</string>
    <string name="autor_es" tools:ignore="Typos">Autor(es):</string>
    <string name="cap_tulos">Capítulos:</string>
    <string name="significado">Significado:</string>
    <string name="url3">https://www.youtube.com/watch?v=0LeV257fZ70</string>
    <string name="video_background">Video background - Walk by Faith 1080p Full HD</string>
    <string name="accept">Entendido</string>
    <string name="no_show">No mostrar mas este mensaje</string>
</resources>
