<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.edwin.abreusoft.manualparanuevoscreyentes.CreditsActivity"
    android:orientation="vertical">

    <include
        layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="@dimen/activity_margin">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher"
            android:contentDescription="@string/content_desc" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/item_padding"
                android:text="@string/icons_by"/>

            <TextView
                android:id="@+id/icon_url1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/item_padding"
                android:text="@string/url1"
                android:textColor="@color/secondary"
                android:textStyle="italic"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/item_padding"
                android:text="@string/license"/>

            <TextView
                android:id="@+id/icon_url2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/item_padding"
                android:text="@string/url2"
                android:textColor="@color/secondary"
                android:textStyle="italic"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_margin">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/faith_background_orig"
            android:contentDescription="@string/content_desc"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/item_padding"
            android:text="@string/video_background"/>

        <TextView
            android:id="@+id/image_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/item_padding"
            android:layout_marginStart="@dimen/item_padding"
            android:text="@string/url3"
            android:textColor="@color/secondary"
            android:textStyle="italic" />
    </LinearLayout>

</LinearLayout>
