<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/primary_light"
    android:backgroundTintMode="multiply"
    android:padding="@dimen/item_padding"
    tools:targetApi="lollipop">

    <TextView
        android:id="@+id/intro_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/introduction"
        android:textAlignment="center"
        android:textColor="@color/primary_text"/>

    <CheckBox
        android:id="@+id/no_show_check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_show"
        android:checked="false" />

    <Button
        android:id="@+id/accept_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/accept" />

</LinearLayout>